recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: reassignment to val
  if(steps=0)
          ^Spiral:8: error: Unit does not take parameters
  {
  ^